correcciones, demos finales, fotos

--- a/anomaly-detection.ipynb
+++ b/anomaly-detection.ipynb
@@ -5,33 +5,44 @@
    "metadata": {},
    "source": [
     "# Demostraciones prácticas de la entrega 2\n",
-    "Juan Francisco Mier Montoto, UO283319"
+    "Este archivo está pensado para ser visualizado en un navegador web utilizando Voilà. Para ejecutarlo, se debe\n",
+    "ejecutar la siguiente línea en una terminal:\n",
+    "```bash\n",
+    "voila anomaly-detection.ipynb\n",
+    "```\n",
+    "\n",
+    "En caso de no tener instalado alguno de los paquetes necesarios, se puede descomentar la sección inferior.\n",
+    "\n",
+    "*Juan Francisco Mier Montoto, UO283319*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Para ejecutar los siguientes ejemplos, se necesitan las siguientes librerías\n",
+    "# Para ejecutar los ejemplos, se necesitan las siguientes librerías:\n",
+    "\n",
     "# %pip install pandas\n",
     "# %pip install matplotlib\n",
     "# %pip install numpy\n",
     "# %pip install scikit-learn\n",
-    "# %pip install ipywidgets"
+    "# %pip install ipywidgets\n",
+    "# %pip install voila"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy.spatial import distance\n",
-    "from sklearn.neighbors import KNeighborsClassifier, NearestNeighbors\n",
+    "from sklearn.neighbors import KNeighborsClassifier, NearestNeighbors, LocalOutlierFactor\n",
+    "from sklearn.datasets import make_blobs\n",
     "from ipywidgets import interact, interactive, fixed, interact_manual\n",
     "import ipywidgets as widgets"
    ]
@@ -45,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,13 +76,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4e5ccf5e6f144d9d89f26f2bc9309668",
+       "model_id": "651df8a1f7bb48eda7d1199fbe191473",
        "version_major": 2,
        "version_minor": 0
       },
@@ -85,16 +96,16 @@
     {
      "data": {
       "text/plain": [
-       "<function __main__.plot_mahalanobis(media, cov, n, x, y, umbral)>"
+       "<function __main__.plot_mahalanobis(umbral)>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def plot_mahalanobis(media, cov, n, x, y, umbral):\n",
+    "def plot_mahalanobis(umbral):\n",
     "\tcov_inv = np.linalg.inv(cov) # inversa de la covarianza para calcular la distancia de Mahalanobis\n",
     "\n",
     "\tdist = [distance.mahalanobis(media, [x[i], y[i]], cov_inv) for i in range(n)]\n",
@@ -110,12 +121,14 @@
     "\n",
     "\t# dibuajar el plot de las muestras originales coloreando las que están por encima del umbral\n",
     "\tplt.title('Muestras coloreadas por encima del umbral')\n",
-    "\tplt.plot(x, y, 'x', color='purple', label='Muestra normal')\n",
-    "\tplt.plot(x[np.abs(dist) > umbral], y[np.abs(dist) > umbral], 'x', color='orange', label='Muestra anómala')\n",
+    "\t# colorear las muestras \"normales\" en una escala según su distancia de Mahalanobis\n",
+    "\tplt.scatter(x[dist_abs < umbral], y[dist_abs < umbral], c=dist_abs[dist_abs < umbral], cmap='viridis', label='Muestra normal')\n",
+    "\tplt.colorbar()\n",
+    "\tplt.scatter(x[dist_abs > umbral], y[dist_abs > umbral], color='red', label='Anomalía')\n",
     "\tplt.legend()\n",
     "\tplt.show()\n",
     "\n",
-    "interact(plot_mahalanobis, media=fixed(media), cov=fixed(cov), n=fixed(n), x=fixed(x), y=fixed(y), umbral=(0, 5, 0.1))"
+    "interact(plot_mahalanobis, umbral=(0, 5, 0.1))"
    ]
   },
   {
@@ -128,18 +141,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7d8a57d67be04ca7b297631670e9a45a",
+       "model_id": "ff52f5b3ba6b43e4b32209a4e99a2fdf",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=5, description='k', max=10, min=1), FloatSlider(value=2.0, description='…"
+       "interactive(children=(IntSlider(value=7, description='k', max=10, min=5), FloatSlider(value=0.5, description='…"
       ]
      },
      "metadata": {},
@@ -148,26 +161,162 @@
     {
      "data": {
       "text/plain": [
-       "<function __main__.knn(media, cov, n, data, k, threshold)>"
+       "<function __main__.knn(k, threshold)>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def knn(media, cov, n, data, k, threshold):\n",
+    "def knn(k, threshold):\n",
     "\tneighbours = NearestNeighbors(n_neighbors=k).fit(data)\n",
     "\tdist, _ = neighbours.kneighbors(data)\n",
     "\tdist = np.mean(dist, axis=1)\n",
-    "\tplt.plot(dist, 'x')\n",
+    "\tplt.plot(dist, 'x', color='purple')\n",
+    "\tplt.title('Distancia media de los ' + str(k) + ' vecinos más cercanos')\n",
     "\tplt.axhline(y=threshold, color='r', linestyle='--', label='Umbral')\n",
-    "\tplt.scatter(np.nonzero(dist > threshold)[0], dist[dist > threshold], color='red', label='Anomalía')\n",
+    "\tplt.scatter(np.nonzero(dist > threshold)[0], dist[dist > threshold], color='orange', label='Anomalía')\n",
     "\tplt.legend()\n",
     "\tplt.show()\n",
     "\n",
-    "interact(knn, media=fixed(media), cov=fixed(cov), n=fixed(n), data=fixed(data), k=(1, 10, 1), threshold=(0, 5, 0.1))"
+    "\t# representación de las muestras coloreando las que están por encima del umbral\n",
+    "\tplt.title('Muestras coloreadas por encima del umbral')\n",
+    "\tplt.plot(x, y, 'x', color='green', label='Muestra normal')\n",
+    "\tplt.plot(x[dist > threshold], y[dist > threshold], 'x', color='red', label='Muestra anómala')\n",
+    "\t# dibujar el radio de la circunferencia de los k vecinos más cercanos de las muestras anómalas\n",
+    "\tfor i in np.nonzero(dist > threshold)[0]:\n",
+    "\t\tcirc = plt.Circle((x[i], y[i]), dist[i], color='red', fill=False)\n",
+    "\t\tplt.gcf().gca().add_artist(circ)\n",
+    "\t\tcirc = plt.Circle((x[i], y[i]), threshold, color='black', fill=False, linestyle='--')\n",
+    "\t\tplt.gcf().gca().add_artist(circ)\n",
+    "\tplt.plot(media[0], media[1], 'o', color='black', label='Media')\n",
+    "\tplt.legend()\n",
+    "\tplt.show()\n",
+    "\n",
+    "interact(knn, k=(5, 10, 1), threshold=(0.1, 1, 0.1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ejemplo 3\n",
+    "Clasificación de anomalías con KNN y LOF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "07b19da5821f4394bad6e076bba51e3c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=7, description='k', max=10, min=5), FloatSlider(value=0.2, description='…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.knn_class(k, threshold)>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def knn_class(k, threshold):\n",
+    "\t# se calcula la distancia media de los k vecinos más cercanos\n",
+    "\tneighbours = NearestNeighbors(n_neighbors=k).fit(data)\n",
+    "\tdist, _ = neighbours.kneighbors(data)\n",
+    "\tdist = np.mean(dist, axis=1)\n",
+    "\n",
+    "\t# se clasifican las muestras en normales y anómalas según el umbral\n",
+    "\tlabels = np.zeros(n)\n",
+    "\tlabels[dist > threshold] = 1\n",
+    "\n",
+    "\t# se crea un clasificador KNN para clasificar las muestras\n",
+    "\tclf = KNeighborsClassifier(n_neighbors=k)\n",
+    "\tclf.fit(data, labels)\n",
+    "\n",
+    "\t# se crea una malla para clasificar todas las muestras del plano\n",
+    "\tx_min, x_max = x.min() - 1, x.max() + 1\n",
+    "\ty_min, y_max = y.min() - 1, y.max() + 1\n",
+    "\txx, yy = np.meshgrid(np.arange(x_min, x_max, 0.1), np.arange(y_min, y_max, 0.1))\n",
+    "\tZ = clf.predict(np.c_[xx.ravel(), yy.ravel()])\n",
+    "\tZ = Z.reshape(xx.shape)\n",
+    "\n",
+    "\t# se dibuja la malla y las muestras\n",
+    "\tplt.contourf(xx, yy, Z, alpha=0.4)\n",
+    "\tplt.scatter(x, y, c=labels, cmap='viridis')\n",
+    "\tplt.title('Clasificación (KNN) de las muestras')\n",
+    "\tplt.show()\n",
+    "\n",
+    "interact(knn_class, k=(5, 10, 1), threshold=(0.1, 0.3, 0.1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c7ffc3017532487bb67a4504f6865eb4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=15, description='k', max=25, min=5), Output()), _dom_classes=('widget-in…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.lof_class(k)>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def lof_class(k):\n",
+    "\t# se crea un clasificador SVM para clasificar las muestras\n",
+    "\tclf = LocalOutlierFactor(n_neighbors=k, novelty=True)\n",
+    "\tclf.fit(data)\n",
+    "\n",
+    "\t# se crea una malla para clasificar todas las muestras del plano\n",
+    "\tx_min, x_max = x.min() - 1, x.max() + 1\n",
+    "\ty_min, y_max = y.min() - 1, y.max() + 1\n",
+    "\txx, yy = np.meshgrid(np.arange(x_min, x_max, 0.1), np.arange(y_min, y_max, 0.1))\n",
+    "\tZ = clf.predict(np.c_[xx.ravel(), yy.ravel()])\n",
+    "\tZ = Z.reshape(xx.shape)\n",
+    "\n",
+    "\t# se dibuja la malla y las muestras\n",
+    "\tplt.contourf(xx, yy, Z, alpha=0.4)\n",
+    "\tplt.scatter(x, y, c=clf.predict(data), cmap='viridis')\n",
+    "\tplt.title('Clasificación (LOF) de las muestras')\n",
+    "\tplt.show()\n",
+    "\n",
+    "interact(lof_class, k=(5, 25, 1))"
    ]
   }
  ],
