--- a/sections/1_intro.tex
+++ b/sections/1_intro.tex
@@ -78,5 +78,5 @@ significativamente con el paso del tiempo. En la actualidad, los sistemas de det
 se basan en técnicas de aprendizaje automático y de minería de datos, reflejando el progreso de la minería
 de excepciones.
 
-El término \textit{minería de anomalías} fue introducido por primera vez por \textit{Patcha y Park} en 2007
+El término \textit{detección de anomalías} fue introducido por primera vez por \textit{Patcha y Park} en 2007
 ~\cite{patcha2007overview}.
