--- a/sections/2_tecnicas.tex
+++ b/sections/2_tecnicas.tex
@@ -55,7 +55,8 @@ técnicas y métodos. Los siguientes enfoques son los más comunes:
 		similaridad entre objetos para medir la \textit{distancia} entre ellos. Los objetos que
 		se encuentren a una distancia mayor que un umbral establecido se considerarán anomalías.
 		En caso de que se pueda representar los datos en un espacio bidimensional, se pueden
-		detectar las anomalías a simple vista.
+		detectar las anomalías a simple vista. La técnica más común es la de los $k$ vecinos más
+		cercanos.
 
 		\begin{minipage}{\linewidth}
 			\centering
@@ -72,7 +73,7 @@ técnicas y métodos. Los siguientes enfoques son los más comunes:
 		objetos normales pertenecen a un cluster o grupo, mientras que los objetos anómalos no
 		pertenecen a ninguno. Por lo tanto, se puede detectar una anomalía si un objeto no pertenece
 		a ningún cluster o si pertenece a un cluster con un número muy pequeño de objetos.
-		\vspace{1\baselineskip}
+		\vspace{1\baselineskip} z
 
 		\begin{minipage}{\linewidth}
 			\centering
