ajustes, correcciones y maquetación

--- a/anomaly-detection.ipynb
+++ b/anomaly-detection.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,13 +76,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "651df8a1f7bb48eda7d1199fbe191473",
+       "model_id": "3250b45301194111b570e839b02d4159",
        "version_major": 2,
        "version_minor": 0
       },
@@ -99,7 +99,7 @@
        "<function __main__.plot_mahalanobis(umbral)>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,13 +141,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ff52f5b3ba6b43e4b32209a4e99a2fdf",
+       "model_id": "b8a85531d44a4c948ba7d01f0a218733",
        "version_major": 2,
        "version_minor": 0
       },
@@ -164,16 +164,19 @@
        "<function __main__.knn(k, threshold)>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def knn(k, threshold):\n",
+    "\t# se calcula la distancia media de los k vecinos más cercanos\n",
     "\tneighbours = NearestNeighbors(n_neighbors=k).fit(data)\n",
     "\tdist, _ = neighbours.kneighbors(data)\n",
     "\tdist = np.mean(dist, axis=1)\n",
+    "\n",
+    "\t# se dibuja la distancia media de los k vecinos más cercanos y el umbral\n",
     "\tplt.plot(dist, 'x', color='purple')\n",
     "\tplt.title('Distancia media de los ' + str(k) + ' vecinos más cercanos')\n",
     "\tplt.axhline(y=threshold, color='r', linestyle='--', label='Umbral')\n",
@@ -185,12 +188,14 @@
     "\tplt.title('Muestras coloreadas por encima del umbral')\n",
     "\tplt.plot(x, y, 'x', color='green', label='Muestra normal')\n",
     "\tplt.plot(x[dist > threshold], y[dist > threshold], 'x', color='red', label='Muestra anómala')\n",
-    "\t# dibujar el radio de la circunferencia de los k vecinos más cercanos de las muestras anómalas\n",
+    "\n",
+    "\t# se dibuja el radio de la circunferencia de los k vecinos más cercanos de las muestras anómalas\n",
     "\tfor i in np.nonzero(dist > threshold)[0]:\n",
     "\t\tcirc = plt.Circle((x[i], y[i]), dist[i], color='red', fill=False)\n",
     "\t\tplt.gcf().gca().add_artist(circ)\n",
     "\t\tcirc = plt.Circle((x[i], y[i]), threshold, color='black', fill=False, linestyle='--')\n",
     "\t\tplt.gcf().gca().add_artist(circ)\n",
+    "\t\t# no sé cómo añadir la etiqueta de la circunferencia a la leyenda :(\n",
     "\tplt.plot(media[0], media[1], 'o', color='black', label='Media')\n",
     "\tplt.legend()\n",
     "\tplt.show()\n",
@@ -208,13 +213,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "07b19da5821f4394bad6e076bba51e3c",
+       "model_id": "97b921f4a2024fb694669ab44ba3827e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -231,7 +236,7 @@
        "<function __main__.knn_class(k, threshold)>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,13 +274,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c7ffc3017532487bb67a4504f6865eb4",
+       "model_id": "32d523e9ec9e4826912ffd4d95a026c0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -292,7 +297,7 @@
        "<function __main__.lof_class(k)>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
