--- a/biblio.bib
+++ b/biblio.bib
@@ -305,14 +305,26 @@
 }
 
 @article{bae2020effective,
-    author = {Duck-Ho Bae and Seo Jeong and Jiwon Hong and Minsoo Lee and Mirjana Ivanović and Miloš Savić and Sang-Wook Kim},
-    title = {An Effective Approach to Outlier Detection Based on Centrality and Centre-Proximity},
-    journal = {Informatica},
-    volume = {31},
-    number = {3},
-    year = {2020},
-    pages = {435--458},
-    doi = {10.15388/20-INFOR413},
-    issn = {0868-4952},
-    publisher = {Vilnius University Institute of Data Science and Digital Technologies}
+  author = {Duck-Ho Bae and Seo Jeong and Jiwon Hong and Minsoo Lee and Mirjana Ivanović and Miloš Savić and Sang-Wook Kim},
+  title = {An Effective Approach to Outlier Detection Based on Centrality and Centre-Proximity},
+  journal = {Informatica},
+  volume = {31},
+  number = {3},
+  year = {2020},
+  pages = {435--458},
+  doi = {10.15388/20-INFOR413},
+  issn = {0868-4952},
+  publisher = {Vilnius University Institute of Data Science and Digital Technologies}
+}
+
+@inproceedings{naz2011multi,
+  author = {Naz, Sheneela and Asghar, Sohail and Fong, Simon and Qayyum, Amir},
+  year = {2011},
+  month = {07},
+  pages = {383-394},
+  title = {Multi-way Association Clustering Analysis on Adaptive Real-Time Multicast Data},
+  volume = {136},
+  isbn = {978-3-642-22184-2},
+  journal = {Communications in Computer and Information Science},
+  doi = {10.1007/978-3-642-22185-9_33}
 }
