--- a/sections/1_intro.tex
+++ b/sections/1_intro.tex
@@ -1,12 +1,5 @@
 \chapter{Introducción}
 \section{Definiciones}
-\subsection{Minería de anomalías}
-En esencia, la minería de anomalías (también conocida como \textit{minería de excepciones} o
-\textit{detección de valores atípicos}) es una rama de la minería de datos que se enfoca en
-la detección de patrones anómalos o inusuales en los datos.
-
-Estas anomalías representan desviaciones significativas de los comportamientos esperados
-o de las tendencias habituales en un entorno comercial.
 \subsection{Anomalía}
 Existen múltiples posibles definiciones de anomalía. Algunas de ellas son:
 \begin{itemize}[topsep=0pt]
@@ -17,6 +10,27 @@ Existen múltiples posibles definiciones de anomalía. Algunas de ellas son:
 	\item Patrones en los datos que no se ajustan a una noción bien definida de comportamiento
 		normal.
 \end{itemize}
+
+\subsection{Minería de datos}
+La minería de datos es un proceso de descubrimiento de conocimiento en bases de datos que
+consiste en la extracción de información implícita, previamente desconocida y potencialmente
+útil de los datos.
+
+La minería de datos es un campo de la estadística y de la informática que se centra en la
+extracción de información de grandes conjuntos de datos. En la actualidad, la minería de datos
+se utiliza en una amplia variedad de campos.
+
+\subsection{Minería de anomalías}
+En esencia, la minería de anomalías (también conocida como \textit{minería de excepciones} o
+\textit{detección de anomalías}) es una rama de la minería de datos que se enfoca en
+la detección de patrones anómalos o inusuales en los datos.
+
+Estas anomalías representan desviaciones significativas de los comportamientos esperados
+o de las tendencias habituales en un entorno comercial.
+
+En resumen, la detección de anomalías es la aplicación de la minería de datos en la detección
+de anomalías, la mezcla de las dos definiciones anteriores.
+
 
 \section{Objetivos y aplicaciones en el mundo real}
 El objetivo principal radica en identificar estos eventos ``atípicos'' que podrían llegar
