--- a/sections/2_tecnicas.tex
+++ b/sections/2_tecnicas.tex
@@ -91,8 +91,16 @@ Dentro de los enfoques anteriores, se distinguen una gran variedad de técnicas 
 	\item Técnicas de ensamblaje (usando \textit{feature bagging})
 	\item Basadas en lógica difusa
 	\item \textit{SVM} de una clase
+	\item \textit{entre otros}
 \end{itemize}
 
 Como anteriormente se ha mencionado, el rendimiento de cada una de estas técnicas depende
 en gran medida del conjunto de datos y los parámetros escogidos, y no existe una ventaja
 clara cuando se comparan entre sí utilizando muchos conjuntos de datos.~\cite{chandola2009anomaly}
+
+\begin{minipage}{\linewidth}
+	\centering
+	\includegraphics[width=\textwidth]{tecnicas.png}
+	\captionof{figure}{Diagrama de técnicas de minería de
+		anomalías.~\cite{naz2011multi}}\label{fig:fig8}
+\end{minipage}
