--- a/sections/3_pre.tex
+++ b/sections/3_pre.tex
@@ -31,7 +31,7 @@ El preprocesamiento de datos se puede dividir en varias fases~\cite{zhang2003dat
 	\item \textbf{Reducción:} se seleccionan los datos relevantes para el problema a resolver y se
 		eliminan los datos redundantes.~\cite{liu2012feature}
 \end{itemize}
-
+\newpage{}
 \subsection{¿Qué relación tiene con la detección de anomalías?}
 El preprocesamiento de datos es una fase esencial para cualquier proceso de minería de datos. En
 el caso de la detección de anomalías, es absolutamente necesario realizar un correcto preprocesado
@@ -49,7 +49,7 @@ efectiva.~\cite{ramirez2022cleaning}
 Gracias al modelo resultante de la minería de anomalías, se puede mejorar el preprocesamiento de
 conjuntos futuros al descartar outliers durante la fase de limpieza, por lo que se mejora
 retroactivamente la calidad de los datos.
-
+\newpage{}
 \section{Selección de características}\label{sec:feat}
 La selección de características~\cite{guyon2003introduction} se enfoca en identificar las variables más relevantes para el
 proceso de detección de anomalías. Los puntos clave de esta fase son la siguiente:
