--- a/sections/7_practica.tex
+++ b/sections/7_practica.tex
@@ -81,3 +81,8 @@ Para el entreno, se utilizan los clasificadores de la librería \Verb#sklearn#. 
 	\includegraphics[width=\textwidth]{demo/lof.png}
 	\captionof{figure}{Clasificación automática de las muestras por LOF}\label{fig:demo32}
 \end{minipage}
+
+Como se puede apreciar, el clasificador KNN es mucho más sensible a los cambios en los parámetros que el clasificador
+LOF.~Además, al menos con este conjunto multivariante, el clasificador LOF es mucho más preciso, ya que no se basa
+en un número de vecinos, sino en la densidad de los datos, lo que permite un mejor ajuste debido a la característica
+del conjunto.
